Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_cippl2cal.yml
+++ b/.github/workflows/master_cippl2cal.yml
@@ -14,12 +14,22 @@ env:
 
 jobs:
   deploy:
-    runs-on: windows-latest
-    
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1FBF0649BDB243AEAE4775BDF97B2668 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_152C211B1E3747CF96D3057AF458B1EE }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A860A72200814BD291E5D13B8E5CCA4C }}
+
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -27,4 +37,4 @@ jobs:
           app-name: 'cippl2cal'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FCB506B9AEA64A7A83DAD4239B04840C }}
+          
